--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -10,19 +10,18 @@
     android:largeScreens="true" 
     android:xlargeScreens="true" 
     android:anyDensity="true" />
-  <application 
-    android:name="com.lcqp.lcqp.wxapi.MyApplication" 
+  <application
+    android:name="com.lcqp.lcqp.wxapi.MyApplication"
     android:icon="@drawable/app_icon" 
     android:label="@string/app_name" 
     android:debuggable="false" 
     android:isGame="true" 
     android:banner="@drawable/app_banner">
-    <activity 
-      android:label="@string/app_name" 
-      android:screenOrientation="landscape" 
-      android:launchMode="singleTask" 
-      android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|fontScale" 
-      android:name="com.lcqp.lcqp.UnityPlayerActivity">
+    <activity android:label="@string/app_name" 
+              android:screenOrientation="landscape" 
+              android:launchMode="singleTask" 
+              android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|fontScale" 
+              android:name="com.lcqp.lcqp.UnityPlayerActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
@@ -30,20 +29,18 @@
       </intent-filter>
       <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
     </activity>
-    <activity>
-      android:name=".wxapi.WXEntryActivity"
+    <activity
+      android:name="com.lcqp.lcqp.wxapi.WXEntryActivity"
       android:label="@string/app_name"
-      android:exported="true"
-    </activity>
+      android:exported="true"/>
   </application>
-  <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="28" />
+  <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="23" />
   <uses-feature android:glEsVersion="0x00020000" />
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
   <uses-feature android:name="android.hardware.touchscreen.multitouch" android:required="false" />
   <uses-feature android:name="android.hardware.touchscreen.multitouch.distinct" android:required="false" />
-  <!--添加权限-->
-  <uses-permission android:name="android.permission.INTERNET"/>
+  <!-- 添加权限 -->
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
   <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
